# tlog

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: quality-control.yml  release.yml
scripts/: linux-install.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  config_command.rs  mod.rs  project_command.rs  session_command.rs
src/core/: app_error.rs  config.rs  format.rs  mod.rs  paths.rs  time_format.rs  tracking.rs  unix_timestamp.rs
src/core/clipboard/: clipboard_backend.rs  mock_clipboard.rs  mod.rs  system_clipboard.rs
src/db/: database.rs  event_repository.rs  manual_session_repository.rs  mod.rs  project_repository.rs  test_utils.rs
src/model/: event.rs  manual_session.rs  mod.rs  project.rs  session.rs
src/tui/: app.rs  mod.rs  render_test_util.rs  terminal_user_interface.rs
src/tui/components/: alert_dialog.rs  dialog.rs  keybinds_dialog.rs  manual_session_dialog.rs  mod.rs  project_form.rs  project_select.rs  project_table.rs  session_table.rs
src/util/: format_util.rs  mod.rs
