[package]
name = "tlog"
version = "1.1.0"
edition = "2024"

[lints.clippy]
all = "deny"           # Fail the build instead of warn
pedantic = "deny"      # Pedantic lints also fail
correctness = "deny"   # Correctness issues
complexity = "deny"    # Overly complex code
perf = "deny"          # Performance anti-patterns
style = "deny"         # Style issues
suspicious = "deny"    # Suspicious patterns

[lints.rust]
unsafe_code = "deny"
unused = "deny"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
ratatui = "0.30.1"
crossterm = "0.29.0"
time = { version = "0.3.47", features = ["local-offset", "macros", "formatting", "parsing"] }
thiserror = "2.0.18"
ratatui-textarea = "0.9.1"
arboard = "3.6.1"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
